# jax-spcs-kinematics

./: Makefile  README.md  pyproject.toml
examples/: spcs_example.py
examples/visualization/: __init__.py
spcs_kinematics/: __init__.py
spcs_kinematics/jax_math/: __init__.py  jax_cs.py  jax_jacobian.py  jax_lie_algebra.py  jax_linear_algebra.py  jax_pcs.py  jax_pose_error.py  jax_quaternion.py  jax_rod_mesh.py  jax_rotation.py  jax_spcs.py
spcs_kinematics/kinematic_parametrizations/: __init__.py  base.py  base_kinematic_parametrization.py  cc_cf.py  cs.py  numeric_kinematics.py  spcs.py
spcs_kinematics/visualization/: __init__.py  plot_inverse_kinematics_convergence.py  plot_rod_shape.py
tests/: test_cc_kinematics.py
